apps/user-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: apps
spec:
  selector:
    app: user-service
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
